Fix vertical alignment

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 body {
+    overflow: hidden;
     background-color:#000000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
